# llm_template_2

./: .env.example  .gitignore  ANOTACIONES.md  Dockerfile  README.md  Resumen.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.claude/: settings.json
.github/workflows/: cd.yml  ci.yml
scripts/: entrypoint.sh
src/my_genai_app/: __init__.py
src/my_genai_app/agents/: __init__.py  base.py  sentiment_agent.py  time_agent.py  weather_agent.py
src/my_genai_app/api/: dependencies.py  main.py  middleware.py
src/my_genai_app/api/routers/: __init__.py  agent.py  health.py
src/my_genai_app/config/: __init__.py  logging.py  settings.py
src/my_genai_app/domain/: __init__.py  enums.py  exceptions.py  models.py
src/my_genai_app/graph/: __init__.py  builder.py  edges.py  nodes.py  state.py
src/my_genai_app/services/: agent_service.py
src/my_genai_app/tools/: __init__.py  time_tool.py  weather_tool.py
tests/: conftest.py
tests/integration/: test_api_endpoints.py
tests/unit/: test_agents.py  test_graph.py  test_settings.py  test_tools.py
