[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-genai-app"
version = "0.1.0"
description = "Production-ready GenAI API with LangChain, LangGraph and FastAPI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "you@example.com" }
]
keywords = ["langchain", "langgraph", "fastapi", "genai", "llm"]

dependencies = [
    # API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # LangChain ecosystem
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-core>=0.2.0",
    "langgraph>=0.1.0",

    # Tools dependencies
    "requests>=2.32.0",
    "geopy>=2.4.1",
    "timezonefinder>=6.5.0",
    "pytz>=2024.1",

    # Resilience
    "tenacity>=8.3.0",

    # Observability
    "structlog>=24.1.0",
    "python-json-logger>=2.0.7",

    # HTTP client async
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",          # TestClient de FastAPI
    "respx>=0.21.0",          # Mock de httpx
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/my_genai_app"]

[tool.hatch.envs.default]
features = ["dev"]

# ─── Pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--cov=my_genai_app",
    "--cov-report=term-missing",
    "--cov-report=xml:coverage.xml",
    "--cov-fail-under=80",
    "-v",
]
env = [
    "ENVIRONMENT=test",
    "OPENAI_API_KEY=sk-test-fake-key",
    "OPENWEATHER_API_KEY=fake-weather-key",
]

# ─── Coverage ─────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

# ─── Ruff (linter + formatter) ────────────────────────────────────────────────
[tool.ruff]
src = ["src"]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = ["E501", "B008", "B904"]

[tool.ruff.lint.isort]
known-first-party = ["my_genai_app"]

# ─── Mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
exclude = ["tests/"]